[tool.poetry]
name = "transaction-middleware"
version = "0.1.3"
description = "Async Transaction Middleware for FastAPI/Starlette"
authors = ["impalah <impalah@gmail.com>"]
readme = "README.md"
packages = [{include = "transaction_middleware", from = "src"}]
license = "MIT"
homepage = "https://impalah.github.io/transaction-middleware/"
repository = "https://github.com/impalah/transaction-middleware"
documentation = "https://impalah.github.io/transaction-middleware/"
keywords = ["transaction", "middleware", "fastapi", "starlette"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: Session",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]




[tool.poetry.dependencies]
python = ">=3.10"
fastapi = ">=0.105.0"
python-dotenv = "^1.0.0"
svix-ksuid = ">=0.6.2"
pydantic = {extras = ["email"], version = ">=2.5.3"}
loguru = ">=0.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-mock = "^3.12.0"
pytest-asyncio = "^0.23.3"
mock = "^5.1.0"
pytest-cov = "^4.1.0"
black = ">=23.12.1,<25.0.0"
pytest-env = "^1.1.3"
mypy = "^1.8.0"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Documentation" = "https://impalah.github.io/transaction-middleware/"
"Source" = "https://github.com/impalah/transaction-middleware"
