[tool.poetry]
name = "FastAPI Transaction Middleware Demo"
version = "0.1.0"
description = ""
authors = ["impalah <impalah@gmail.com>"]
readme = "README.md"
packages = [{include = "demo", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.29.0"
fastapi = "^0.105.0"
python-dotenv = "^1.0.1"
jinja2 = "^3.1.3"
loguru = "^0.7.2"
transaction-middleware = {path = "../../../transaction-middleware"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-mock = "^3.12.0"
pytest-asyncio = "^0.23.3"
mock = "^5.1.0"
pytest-cov = "^4.1.0"
black = "^23.12.1"
pytest-env = "^1.1.3"
types-requests = "^2.31.0.20240311"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
